--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,13 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=210MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
+#Crnk Config
+crnk.enabled=true
+crnk.security.enabled=false
+#crnk.domain-name=http://localhost:8080
+crnk.path-prefix=/api
+crnk.default-page-limit=20
+#crnk.max-page-limit=1000
+#crnk.allow-unknown-attributes=false
+#crnk.return404-on-null=true
