--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 # Configurations for the database connection
 
 #create-drop| create | update | validate | none
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
-spring.datasource.username=dbuser
-spring.datasource.password=root
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
+#spring.datasource.username=dbuser
+#spring.datasource.password=root
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql=true
 
+#DynamoDB creat table
+dynamodb.table.create-on-start=false
 # live Reload
 spring.thymeleaf.cache=false
 spring.resources.cache-period=0
@@ -20,9 +22,9 @@ spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
 # Max file size.
-spring.servlet.multipart.max-file-size=210MB
+spring.servlet.multipart.max-file-size=400KB
 # Max Request Size
-spring.servlet.multipart.max-request-size=215MB
+spring.servlet.multipart.max-request-size=400KB
 
 #Crnk Config
 crnk.enabled=true
@@ -32,4 +34,4 @@ crnk.path-prefix=/api
 crnk.default-page-limit=20
 #crnk.max-page-limit=1000
 #crnk.allow-unknown-attributes=false
-#crnk.return404-on-null=true
+crnk.return404-on-null=true
